--- a/client/src/components/HomePage/HomePage.module.css
+++ b/client/src/components/HomePage/HomePage.module.css
@@ -12,7 +12,7 @@
 }
 
 .bannerTitle {
-  color: white;
+  color: var(--font-main);
   font-size: 3rem;
   font-style: italic;
   text-transform: uppercase;
@@ -33,4 +33,10 @@
   text-align: center;
   font-size: 2rem;
   margin: 0.5rem 0;
+}
+
+.showMoreLink {
+  display: block;
+  text-align: center;
+  text-decoration: none;
 }
