--- a/client/src/components/RecipeCard/RecipeCard.module.css
+++ b/client/src/components/RecipeCard/RecipeCard.module.css
@@ -1,9 +1,11 @@
 .recipeContainer {
+  position: relative;
   color: white;
 }
 
 .recipeImage {
   width: 100%;
+  max-height: 250px;
 }
 
 .recipeLink {
@@ -29,4 +31,26 @@
 .dietItem {
   color: var(--font-light);
   list-style: none;
+}
+
+.favIcon {
+  width: 1em;
+  height: 1em;
+  display: grid;
+  place-content: center;
+  margin: 0.4rem;
+  padding: 1.25rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #717171;
+  border: none;
+  border-radius: 2rem;
+}
+
+.hearts {
+  display: flex;
+  margin-top: 0.25rem;
+  gap: 0.25rem;
+  align-items: center;
 }
