--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,17 @@
   --bg-color-active: #262724;
   --font-main: #e3e2cf;
   --font-light: #9b908b;
-  --font-navy: #322b54;
+  --font-selected: #322b54;
 }
+
+/* .light :root {
+  --bg-color: #e3e2cf;
+  --bg-color-hover: #9b908b;
+  --bg-color-active: #9b908b;
+  --font-main: #20211d;
+  --font-light: #262724;
+  --font-selected: #322b54;
+} */
 
 * {
   margin: 0;
@@ -13,6 +22,11 @@
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: var(--font-main);
+}
+
+*::selection {
+  background-color: var(--font-selected);
   color: var(--font-main);
 }
 
